App usage categories: daily rollup + manual test hook; usage access flow

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,11 @@
 .externalNativeBuild
 .cxx
 local.properties
+
+# --- Dev artifacts / logs (do not version) ---
+*.csv
+*.txt
+
+# --- Build outputs ---
+/**/build/
+app/release/
