--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,16 +6,17 @@
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
-    <!-- No location FGS needed now that BT is disabled -->
-    <!-- <uses-permission android:name="android.permission.FOREGROUND_SERVICE_LOCATION" /> -->
 
     <!-- Usage stats -->
     <uses-permission
         android:name="android.permission.PACKAGE_USAGE_STATS"
         tools:ignore="ProtectedPermissions" />
 
-    <!-- Calls (SMS removed earlier) -->
+    <!-- Calls -->
     <uses-permission android:name="android.permission.READ_CALL_LOG" />
+
+    <!-- 💬 SMS read for sent/received counts -->
+    <uses-permission android:name="android.permission.READ_SMS" />
 
     <!-- Android 13+ notifications runtime -->
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
@@ -39,7 +40,7 @@
             </intent-filter>
         </receiver>
 
-        <!-- Dev test triggers (Bluetooth actions removed) -->
+        <!-- Dev test triggers -->
         <receiver
             android:name=".TestWorkersReceiver"
             android:exported="true">
@@ -47,6 +48,13 @@
                 <action android:name="com.nick.myrecoverytracker.TEST_CALL_TOTALS" />
                 <action android:name="com.nick.myrecoverytracker.TEST_DISTANCE_SUMMARY" />
                 <action android:name="com.nick.myrecoverytracker.TEST_LOCATION_SAMPLE" />
+                <action android:name="com.nick.myrecoverytracker.TEST_RECOVERY_VISITS" />
+                <action android:name="com.nick.myrecoverytracker.TEST_SENSOR_SAMPLE" />
+                <action android:name="com.nick.myrecoverytracker.TEST_MOVEMENT_INTENSITY" />
+                <action android:name="com.nick.myrecoverytracker.TEST_MESSAGES_SENT" />
+                <action android:name="com.nick.myrecoverytracker.TEST_MESSAGES_RECEIVED" />
+                <!-- NEW: app usage categories -->
+                <action android:name="com.nick.myrecoverytracker.TEST_APP_USAGE_CATEGORY" />
             </intent-filter>
         </receiver>
 
@@ -71,7 +79,7 @@
             </intent-filter>
         </activity>
 
-        <!-- Placeholder (kept; referenced by MainActivity/notifications) -->
+        <!-- Placeholder (referenced by MainActivity/notifications) -->
         <activity
             android:name=".OnboardingActivity"
             android:exported="false"
