gitignore: allow evidence/v6.0/**; add UNLOCKS evidence logs (EE2.1, EE3.1, WM)

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,7 @@ local.properties
 # --- Build outputs ---
 /**/build/
 app/release/
+!evidence/
+!evidence/v6.0/
+!evidence/v6.0/**
+!evidence/v6.0/**/*.txt
