--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,5 @@ app/release/
 !evidence/v6.0/**/*.txt
 !evidence/v6.0//.txt
 !evidence/v6.0//*.txt
+!evidence/v6.0/sleep/
+!evidence/v6.0/sleep/*.txt
